--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ addons:
       description: "VKGeo Friends on Map for VKontakte Web app"
     notification_email: oleg.derevenetz@gmail.com
     build_command_prepend: ""
-    build_command: "--no-command --fs-capture-search web/"
+    build_command: "--no-command --fs-capture-search ./"
     branch_pattern: coverity_scan
 
 script:
